feat: #57 Implemented user login validation endpoint to validate user login using validation hash.
